- fixed letter-spacing for button in FF

--- a/app/styles/collected.styl
+++ b/app/styles/collected.styl
@@ -43,6 +43,7 @@ input[type="text"] {
 
 .btn {
   font-size: 14px;
+  letter-spacing: 0;
   -webkit-appearance: none;
   padding: 8px;
   background-color: darkPrimaryColor;
